# Automatic-Soldering-Station-based-on-ESP32

./: .gitignore  CMakeLists.txt  ProjectStructure.md  README.md  additional_info_about_structure.md  parser.py  partitions.csv  platformio.ini  sdkconfig.defaults
assets/3d_models/pcb_holder/: base.stl  fixing_slider.stl  rails.stl  rails_cap.stl
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/execution_fsm/: CMakeLists.txt  execution_fsm.cpp
components/execution_fsm/include/: execution_fsm.h
components/filesystem/: CMakeLists.txt  filesystem.c
components/filesystem/include/: filesystem.h
components/fsm_controller/: CMakeLists.txt  fsm_controller.cpp
components/fsm_controller/include/: fsm_controller.h
components/gcode_parser/: CMakeLists.txt  gcode_executor.cpp  gcode_parser.c
components/gcode_parser/include/: gcode_executor.h  gcode_parser.h
components/motion_controller/: CMakeLists.txt  motion_controller.cpp
components/motion_controller/include/: motion_controller.h
components/soldering_iron/: CMakeLists.txt  SolderingIron.cpp  soldering_iron_hal.c
components/soldering_iron/include/: SolderingIron.hpp  soldering_iron_hal.h
components/stepper_motor/: CMakeLists.txt  MM_PER_STEP_CALCULATION.md  StepperMotor.cpp  stepper_motor_hal.c
components/stepper_motor/include/: StepperMotor.hpp  stepper_motor_hal.h
components/temperature_sensor/: CMakeLists.txt  TemperatureSensor.cpp  temperature_sensor_hal.c
components/temperature_sensor/include/: TemperatureSensor.hpp  pins.h  temperature_sensor_hal.h
components/web_server/: CMakeLists.txt  web_server.cpp
components/web_server/include/: web_server.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: FILES_SUMMARY.md  GCODE_REFERENCE.md  HARDWARE_SETUP.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
tools/: drill_to_gcode.py
web_interface/: app.js  gcode_validator.js  index.html  style.css  visualizer.js
